--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -83,6 +83,7 @@
 }
 
 .registerBtn {
+    cursor: pointer;
     position: absolute;
     top: 0.8rem;
     right: 1.5rem;
@@ -90,11 +91,6 @@
     color: #fff;
     width: 10rem;
 }
-
-.inline {
-    display: flex;
-}
-
 .startBtn {
     background-image: linear-gradient(to right, rgb(250, 3, 250), rgb(83, 0, 138));
     display: block;
@@ -105,6 +101,12 @@
     font-weight: 600;
 
 }
+
+.inline {
+    display: flex;
+}
+
+
 
 .nameGr,
 .nameGr>* {
