--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -7,6 +7,7 @@
 
 .box1 {
     background-color: rgb(12, 12, 12);
+    height: 100vh;
 }
 
 .typeWriter {
@@ -71,6 +72,7 @@
 
 .box1{
     width: 180vh;
+    background-color: rgb(12, 12, 12);
 }
 
 .purpleDiv {
@@ -199,11 +201,10 @@
         width: 100vw;
     }
     .box1{
-        display: flex;
-        justify-content: center;
-        margin-left: auto;
-        margin-right: auto;
-        width: 98%;
+        background-color: black;
+        width: 100vw;
+        height: 120vh;
+        padding-top: 2rem;
     }
 
     .registerBtn {
@@ -222,10 +223,7 @@
         height: 400px;
         width: 400px;
     }
-    .box1{
-        width: 90vw;
-        padding-top: 2rem;
-    }
+
 }
 
 @media (max-width: 415px){
