--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -15,7 +15,7 @@ nav{
     color: #fff;
     border-radius: 25px;
     font-weight: 600;
-    margin-top: 2rem;
+    margin-top: .4rem;
     
 }
 .typeWriter {
