--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -32,7 +32,7 @@ nav{
     color: #fff;
     border-radius: 25px;
     font-weight: 600;
-    margin-top: .4rem;
+    margin-top: 1.3rem;
     
 }
 .typeWriter {
@@ -56,6 +56,7 @@ nav{
 
 .appLogo {
     height: 4rem;
+    margin-top: 0.5rem;
 }
 
 .inlineLanding {
@@ -92,7 +93,7 @@ nav{
 }
 
 .big {
-    font-size: 4rem;
+    font-size: 5rem;
     font-weight: 800;
 }
 
@@ -113,6 +114,9 @@ nav{
     display: flex;
 }
 
+.getText{
+    display: block;
+}
 
 
 .nameGr,
@@ -124,7 +128,7 @@ nav{
 
 .typeWriterH2,
 .typeWriterH2>* {
-    font-size: 3.5rem;
+    font-size: 3rem;
     background: linear-gradient(to right, rgb(224, 4, 224), rgb(49, 0, 185));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -226,5 +230,12 @@ nav{
     .heroimg img{
         height: 350px;
         width: 350px;
+    }
+    .regis{
+
+        font-size: 0.7rem;
+
+        font-weight: 500;
+        
     }
 }
