--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -25,7 +25,7 @@ nav{
     display: flex;
     justify-content: space-between;
     padding-left: 9rem;
-    padding-right: 1rem;
+    padding-right: 2rem;
 }
 
 .regis{
@@ -120,6 +120,10 @@ nav{
     display: block;
 }
 
+.poll{
+    font-weight: 900;
+}
+
 
 .nameGr,
 .nameGr>* {
@@ -138,7 +142,7 @@ nav{
 
 .ques,
 .ques>* {
-    font-size: 3rem;
+    font-size: 4rem;
     background: linear-gradient(to right, rgb(224, 4, 224), rgb(199, 9, 9));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -195,6 +199,10 @@ nav{
     .big {
         font-size: 1.9rem;
         font-weight: 600;
+    }
+    .poll{
+        font-size: 2.5rem;
+        font-weight: bold;
     }
 
     .typeWriterH2 {
