--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: center;
     margin-top: 1rem;
-    margin-bottom: 2rem;
+    /* margin-bottom: 5rem; */
 }
 
 .btn{
