--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,6 +1,6 @@
 .loginTop{
     padding-top: 1rem;
-    width: 100vw;;
+    width: 100vw;
     background-image: linear-gradient(to bottom , rgb(59, 1, 59), rgb(168, 3, 168) );
     height: 100vh;
 }
